--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ DATABASE_URL=postgresql://motasdb_user:Nq9xAwiBGV9scxLvb2lwUxHVtJdv9hbv@dpg-d10g
 DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY}
 DJANGO_DEBUG=True
 DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
-EMAIL_HOST_USER = programandoconv@gmail.com
-EMAIL_HOST_PASSWORD = jxdt hser fbco nggt
+EMAIL_HOST_USER = whiledebugging@gmail.com
+EMAIL_HOST_PASSWORD = pffx oisk zlcj orgd
 DEFAULT_FROM_EMAIL = EMAIL_HOST_USER
