llamadas y modal de citas

--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
 DATABASE_URL=postgresql://motasdb_user:Nq9xAwiBGV9scxLvb2lwUxHVtJdv9hbv@dpg-d10ga5a4d50c73aovrm0-a/motasdb
-DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY}
+DJANGO_SECRET_KEY=django-insecure-4!z@8^1#b2r3$w7q6p9e0s%u&x*lmz!a@d1f2g3h4j5k6l7m8n9o0p
 DJANGO_DEBUG=True
-DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
-EMAIL_HOST_USER = whiledebugging@gmail.com
-EMAIL_HOST_PASSWORD = pffx oisk zlcj orgd
-DEFAULT_FROM_EMAIL = EMAIL_HOST_USER
+EMAIL_HOST_USER=whiledebugging@gmail.com
+EMAIL_HOST_PASSWORD=pffx oisk zlcj orgd
+DEFAULT_FROM_EMAIL=whiledebugging@gmail.com
